# agent-lernen

./: .gitignore  README.md
agent-course/: requirements.txt
agent-course-hs/: .gitignore  ARCHITECTURE.md  CHEATSHEET.md  HASKELL_VS_PYTHON.md  INDEX.md  QUICKSTART.md  README.md  SUMMARY.md  agent-hs.cabal  package.yaml  stack.yaml
agent-course-hs/app/: Main.hs
agent-course-hs/src/Agent/: Core.hs  Hooks.hs  Session.hs  Tools.hs  Types.hs
agent-course-hs/test/: Spec.hs
agent-course-v2/chapters/: ch00-为什么从零手写.md  附录.md  (+14 more)
docs/: AI Systems Research MOC - 中文版.md  AI Systems Research MOC.md  Claude Code Harness Engineering Analysis - 中文版.md  Claude Code Harness Engineering Analysis.md  Hermes Agent Harness Engineering Analysis - 中文版.md  Hermes Agent Harness Engineering Analysis.md  OpenClaw Harness Engineering Analysis - 中文版.md  OpenClaw Harness Engineering Analysis.md  claude-code-architecture-analysis.md  claude-code-vs-omx-对比分析.md  oh-my-codex Harness Engineering Analysis - 中文版.md  oh-my-codex Harness Engineering Analysis.md  oh-my-codex-研究报告.md
my-first-agent/: .agent_memory.db  AGENT_V4_DEMO_SUMMARY.md  AGENT_V4_TEST_SUMMARY.md  CHAPTER10_SUMMARY.md  CHAPTER11_SUMMARY.md  CHAPTER12_SUMMARY.md  CHAPTER13_SUMMARY.md  CHAPTER14_SUMMARY.md  CHAPTER1_SUMMARY.md  CHAPTER2_SUMMARY.md  CHAPTER3_SUMMARY.md  CHAPTER4_IMPROVEMENTS.md  CHAPTER4_SUMMARY.md  CHAPTER5_SUMMARY.md  CHAPTER6_SUMMARY.md  CHAPTER7_SUMMARY.md  CHAPTER8_SUMMARY.md  CHAPTER9_SUMMARY.md  CHAPTER_REVIEW.md  IMPROVEMENTS_SUMMARY.md  LEARNING_NOTES.md  LEARNING_PROGRESS.md  agent.py  agent_v2.py  agent_v3.py  agent_v4.py  agent_v5.py  demo_agent_v4.py  demo_agent_v5.py  test_agent_v4_full.py  test_agent_v5.py  test_all_capabilities.py  test_chapter4.py  test_chapter4_improvements.py  test_file_tools.py  test_improvements.py
(+139 files in other folders)
