cabal-version:      2.4
name:               agent-hs
version:            0.1.0.0
synopsis:           AI Agent implementation in Haskell
license:            MIT
author:             Agent Course
maintainer:         agent-course@example.com
category:           Artificial Intelligence
build-type:         Simple

common common-options
    default-language: Haskell2010
    ghc-options:      -Wall -Wcompat -Widentities -Wincomplete-record-updates
                      -Wincomplete-uni-patterns -Wmissing-export-lists
                      -Wmissing-home-modules -Wpartial-fields -Wredundant-constraints
    build-depends:    base >= 4.14 && < 5
                    , aeson >= 2.0
                    , text >= 2.0
                    , mtl >= 2.2
                    , transformers >= 0.5
                    , async >= 2.2
                    , uuid >= 1.3
                    , unordered-containers >= 0.2
                    , vector >= 0.12

library
    import:           common-options
    exposed-modules:  Agent.Core
                    , Agent.Types
                    , Agent.Tools
                    , Agent.Hooks
                    , Agent.Session
    hs-source-dirs:   src
    build-depends:    base
                    , aeson
                    , text
                    , mtl
                    , transformers
                    , async
                    , uuid
                    , unordered-containers
                    , vector

executable agent-example
    import:           common-options
    main-is:          Main.hs
    hs-source-dirs:   app
    build-depends:    base
                    , agent-hs
                    , text
                    , aeson
